# sage-lsp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: README.md  example.sage
sage_lsp/: __init__.py  sage_features.py  server.py
src/sagelsp/: __init__.py  __main__.py  _version.py  enumeration.py  notebook.py  server.py  symbols_cache.py
src/sagelsp/config/: __init__.py  format_config.py
src/sagelsp/plugins/: actions.py  autopep8_format.py  completion.py  cython_utils.py  definition.py  folding.py  hookspecs.py  hover.py  jedi_definition.py  jedi_utils.py  loader.py  manager.py  pycodestyle.py  pycodestyle_lint.py  pycodestyle_patch.py  pyflakes_lint.py  references.py  sage_utils.py  spec.py
test/: README.md  README.zh_CN.md  color.py  conftest.py  lsp_client.py  lspclient.py  lspclientbase.py  test_autopep8.py  test_completion.py  test_definition.py  test_hover.py  test_jedi_definition.py  test_lsp_server.py  test_pycodestyle.py  test_pyflakes.py  test_type_definition.py
tests/: README.md  README.zh_CN.md  color.py  examples.py  test_cython_utils.py  test_definition.py  test_hover.py  test_lsp_server.py  test_pycodestyle.py  test_sage_features.py  test_symbols_cache.py  test_type_definition.py
