[project]
name = "sage-lsp"
version = "0.0.1"
requires-python = ">=3.9"
description = "SageMath Language Server Protocol"
dependencies = [
    "pygls==2.0.0",
    "pluggy==1.6.0",
    "platformdirs==4.4.0",
    "pycodestyle==2.14.0",
    "autopep8==2.3.2",
    "pyflakes==3.4.0",
    "jedi==0.19.2",
    "docstring-to-markdown==0.17",
    "rope==1.14.0",
]
authors = [
    { name = "SeanDictionary", email = "sean.dictionary@qq.com" }
]
license = { text = "GPL3" }

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/SeanDictionary/sage-lsp"

[project.scripts]
sagelsp = "sagelsp.__main__:main"

[project.entry-points.sagelsp]
pycodestyle = "sagelsp.plugins.pycodestyle_lint"
autopep8 = "sagelsp.plugins.autopep8_format"
pyflakes = "sagelsp.plugins.pyflakes_lint"
definition = "sagelsp.plugins.definition"
references = "sagelsp.plugins.references"
hover = "sagelsp.plugins.hover"
folding = "sagelsp.plugins.folding"
actions = "sagelsp.plugins.actions"

[tool.pytest.ini_options]
addopts = "-s -v --tb=short"
console_output_style = "classic"